# hecate-os

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  README.md  SECURITY.md  build-fast.sh  build.sh  docker-entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_support.md
.github/workflows/: build-iso.yml  release.yml  rust-ci.yml
build-fast/: README.md  build-bootc.sh  build-mmdebstrap.sh  install-deps.sh  pre-ci-check.sh  test-local.sh
config/: lb_config.sh
config/hecate/: ports.conf
config/includes.chroot/etc/: os-release
config/includes.installer/: autoinstall.yaml
config/package-lists/: ai-ml.list.chroot  development.list.chroot  nvidia.list.chroot  performance.list.chroot  system.list.chroot
config/systemd/: hecate-monitor.service
docs/: ARCHITECTURE.md  COMPARISON.md  REPOSITORY.md  ROADMAP.md
hecate-dashboard/: .env.example  README.md
hecate-dashboard/components/: system-dashboard.tsx
rust/: .gitignore  Cargo.toml
rust/hecate-bench/: Cargo.toml
rust/hecate-changelog/: Cargo.toml
rust/hecate-changelog/src/: main.rs
rust/hecate-cli/: Cargo.toml
rust/hecate-cli/src/: main.rs
rust/hecate-core/src/: config.rs  lib.rs
rust/hecate-deps/: Cargo.toml
rust/hecate-deps/src/: main.rs
rust/hecate-dev/: Cargo.toml
rust/hecate-dev/src/: check.rs  commit.rs  main.rs  release.rs  version.rs
rust/hecate-gpu/: Cargo.toml  README.md
rust/hecate-gpu/benches/: gpu_operations.rs
rust/hecate-gpu/src/: amd.rs  driver.rs  error.rs  lib.rs  monitor.rs  nvidia.rs
rust/hecate-gpu/tests/: integration_tests.rs
rust/hecate-hooks/: Cargo.toml
rust/hecate-hooks/src/: main.rs
rust/hecate-ml/: Cargo.toml
rust/hecate-ml/src/: dataset.rs  distributed.rs  error.rs  frameworks.rs  lib.rs  optimization.rs  profiling.rs
rust/hecate-monitor/: Cargo.toml
rust/hecate-monitor/src/: dashboard.html  main.rs
