[workspace]
members = [
    "hecate-core",
    "hecate-gpu",
    "hecate-daemon",
    "hecate-pkg",
    "hecate-dev",
    "hecate-lint",
    "hecate-hooks", 
    "hecate-changelog",
    "hecate-deps",
    "hecate-arch",
    "hecate-bench",
    "hecate-monitor",
    "hecate-ml",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HecateOS Team"]
license = "MIT"
repository = "https://github.com/Arakiss/hecate-os"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Hardware monitoring
nvml-wrapper = "0.9"
sysinfo = "0.30"
procfs = "0.16"

# System interaction
nix = { version = "0.27", features = ["fs", "process", "signal"] }
libc = "0.2"

# Async runtime
async-trait = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Custom release profile for native CPU optimization
# Note: rustflags in profiles is unstable, use RUSTFLAGS environment variable instead
# Example: RUSTFLAGS="-C target-cpu=native" cargo build --release