[package]
name = "hecate-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hecate-bench"
path = "src/main.rs"

[dependencies]
# Core dependencies
hecate-core = { path = "../hecate-core" }
hecate-gpu = { path = "../hecate-gpu" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# System info
sysinfo = "0.30"
procfs = "0.16"
nvml-wrapper = "0.9"

# Parallel computing
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.16"

# Math and crypto for benchmarks
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"

# Memory benchmarking
memmap2 = "0.9"

# Network benchmarking
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Time and formatting
chrono = "0.4"
humantime = "2.1"
byte-unit = "5.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.4"
quickcheck = "1.0"

# Benchmarks will be added later