[package]
name = "hecate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hecate"
path = "src/main.rs"

[dependencies]
# Core dependencies
hecate-core = { path = "../hecate-core" }
hecate-gpu = { path = "../hecate-gpu" }

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"

# Terminal UI
tui = "0.19"
crossterm = "0.27"
termion = "3.0"

# Formatting and colors
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

# System info
sysinfo = "0.30"
procfs = "0.16"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"
humantime = "2.1"

# Network
reqwest = { version = "0.11", features = ["json"] }