[package]
name = "hecate-deps"
version = "0.1.0"
edition = "2021"
authors = ["HecateOS Team"]
license = "MIT"
description = "HecateOS dependency manager and analyzer"

[[bin]]
name = "hecate-deps"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = "0.22"
colored = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }