[package]
name = "hecate-dev"
version = "0.1.0"
edition = "2021"
authors = ["HecateOS Team"]
license = "MIT"
description = "HecateOS development tools CLI"

[[bin]]
name = "hecate-dev"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Git and version management
git2 = "0.18"
semver = "1.0"
toml_edit = "0.22"
regex = "1.10"
chrono = "0.4"

# File system operations
walkdir = "2.4"
ignore = "0.4"

# For release notes generation
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"