[package]
name = "hecate-ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Machine Learning workload optimizer for HecateOS"
keywords = ["ml", "machine-learning", "pytorch", "tensorflow", "optimization"]
categories = ["machine-learning", "performance", "optimization"]

[dependencies]
# Core async and serialization
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System interaction
nix = { workspace = true }
libc = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

# Configuration
toml = "0.8"

# Process management
which = "6.0"
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System info
sysinfo = "0.30"
procfs = "0.16"

# Math and statistics
num-traits = "0.2"
approx = "0.5"
num_cpus = "1.16"

# ML framework detection
walkdir = "2.3"

# HTTP client for downloading models/data
reqwest = { version = "0.11", features = ["json"] }

# File operations
tempfile = "3.8"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
rstest = "0.18"

[features]
default = ["pytorch", "tensorflow", "onnx"]
pytorch = []
tensorflow = []
onnx = []
huggingface = []
testing = []

